the tedious project has too many bugs