@@ -1,16 +1,17 @@
 package cn.edu.pku.sei.plde.ACS.localization;
 
+import cn.edu.pku.sei.plde.ACS.localization.common.library.JavaLibrary;
+import cn.edu.pku.sei.plde.ACS.localization.common.synth.TestClassesFinder;
+import cn.edu.pku.sei.plde.ACS.localization.gzoltar.GZoltarSuspiciousProgramStatements;
+import cn.edu.pku.sei.plde.ACS.localization.gzoltar.StatementByUW;
 import cn.edu.pku.sei.plde.ACS.localization.gzoltar.StatementExt;
+import cn.edu.pku.sei.plde.ACS.localization.metric.Metric;
+import cn.edu.pku.sei.plde.ACS.localization.metric.NoMetric;
+import cn.edu.pku.sei.plde.ACS.localization.metric.Ochiai;
 import cn.edu.pku.sei.plde.ACS.main.Config;
 import cn.edu.pku.sei.plde.ACS.utils.FileUtils;
 import cn.edu.pku.sei.plde.ACS.utils.RecordUtils;
 import com.gzoltar.core.components.Statement;
-import cn.edu.pku.sei.plde.ACS.localization.common.SuspiciousField;
-import cn.edu.pku.sei.plde.ACS.localization.metric.Metric;
-import cn.edu.pku.sei.plde.ACS.localization.metric.Ochiai;
-import cn.edu.pku.sei.plde.ACS.localization.common.synth.TestClassesFinder;
-import cn.edu.pku.sei.plde.ACS.localization.gzoltar.GZoltarSuspiciousProgramStatements;
-import cn.edu.pku.sei.plde.ACS.localization.common.library.JavaLibrary;
 import org.apache.commons.lang.StringUtils;
 
 import java.io.*;
@@ -29,6 +30,7 @@ public class Localization  {
     private String srcPath;
     private List<String> libPaths = new ArrayList<>();
 
+    private Map<String, Double> scoreMapOfUW;
 
     public Localization(String classPath, String testClassPath, String testSrcPath, String srcPath, List<String> libPaths) {
         this(classPath, testClassPath, testSrcPath, srcPath);
@@ -36,7 +38,7 @@ public class Localization  {
     }
 
 
-    public Localization(String classPath, String testClassPath, String testSrcPath, String srcPath){
+    private Localization(String classPath, String testClassPath, String testSrcPath, String srcPath){
         this.classpath = classPath;
         this.testClassPath = testClassPath;
         this.testSrcPath = testSrcPath;
@@ -53,62 +55,29 @@ public class Localization  {
         testClasses = new String[]{testClass};
     }
 
-    public List<StatementExt> getSuspiciousList(){
-        return this.getSuspiciousListWithMetric(new Ochiai());
-    }
 
 
-    public List<StatementExt> getSuspiciousListWithSuspiciousnessBiggerThanZero(){
-        List<StatementExt> statements = this.getSuspiciousList();
-        List<StatementExt> result = new ArrayList<StatementExt>();
-        for (StatementExt statement: statements){
-            if (statement.getSuspiciousness()>0){
+
+    public List<Statement> getSuspiciousListWithSuspiciousnessBiggerThanZero(Metric metric){
+        List<Statement> statements = this.getSuspiciousList(metric);
+        List<Statement> result = new ArrayList<>();
+        for (Statement statement: statements){
+            double score;
+            if(statement instanceof StatementByUW){
+                score = ((StatementByUW) statement).getSuspiciousness();
+            }else{
+                score = ((StatementExt) statement).getSuspiciousness();
+            }
+            if (score > 0){
                 result.add(statement);
             }
         }
         return result;
     }
 
-    public List<HashMap<SuspiciousField, String>> getSuspiciousListLite() {
-        List<StatementExt> statements = this.getSuspiciousListWithSuspiciousnessBiggerThanZero();
-        List<HashMap<SuspiciousField, String>> result = new ArrayList<HashMap<SuspiciousField, String>>();
-        StatementExt firstline = statements.get(0);
-        StatementExt lastline = statements.get(0);
-        for (StatementExt statement: statements){
-            if (getClassAddressFromStatement(statement).equals(getClassAddressFromStatement(firstline)) && getTargetFunctionFromStatement(statement).equals(getTargetFunctionFromStatement(firstline))){
-                firstline = statement.getLineNumber() < firstline.getLineNumber() ? statement : firstline;
-                lastline = statement.getLineNumber() > lastline.getLineNumber() ? statement : lastline;
-            }else {
-                HashMap<SuspiciousField, String> data = new HashMap<SuspiciousField, String>();
-                data.put(SuspiciousField.class_address, getClassAddressFromStatement(firstline));
-                data.put(SuspiciousField.error_tests, getErrorTestsStringFromStatement(firstline));
-                data.put(SuspiciousField.line_number, getLineNumberFromStatement(firstline)+"-"+getLineNumberFromStatement(lastline));
-                data.put(SuspiciousField.suspiciousness, getSupiciousnessFromStatement(firstline));
-                data.put(SuspiciousField.target_function, getTargetFunctionFromStatement(firstline));
-                result.add(data);
-                firstline = statement;
-                lastline = statement;
-            }
-        }
-        return result;
-    }
 
-    public List<Suspicious> getNewSuspicious(String subject, String bugid){
-        File suspicousFile = new File(Config.LOCALIZATION_RESULT_CACHE+ FileUtils.getMD5(StringUtils.join(testClasses,"")+classpath+testClassPath+srcPath+testSrcPath)+".sps");
-
-        if (suspicousFile.exists()){
-            try {
-                ObjectInputStream objectInputStream = new ObjectInputStream(new FileInputStream(suspicousFile));
-                List<Suspicious> result = (List<Suspicious>) objectInputStream.readObject();
-                objectInputStream.close();
-                return result;
-            }catch (Exception e){
-                System.out.println("Reloading Localization Result...");
-            }
-        }
-
-        List<Suspicious> result = new ArrayList<Suspicious>();
-
+    private Map<String, Double> loadUWData(String subject, String bugid){
+        Map<String, Double> result = new HashMap<>();
         String proj = subject.toLowerCase().substring(1);
         proj = Character.toUpperCase(subject.charAt(0)) + proj;
         String locPath = "localization/ochiai/" + proj + "/" + bugid + ".txt";
@@ -120,11 +89,16 @@ public class Localization  {
             bReader = new BufferedReader(fReader);
             String line = null;
             while ((line = bReader.readLine()) != null) {
-                String[] columns = line.split("#");
-                String clsName = columns[0];
-                int lineNum = new Integer(columns[1].split(",")[0]);
-                double score = new Double(columns[1].split(",")[1]);
+                String[] columns = line.split(",");
+                //sth like 'org.apache.commons.math3.optimization.linear.Relationship#59'
+                String key = columns[0];
+                String val = columns[1];
+                Double score = Double.valueOf(val);
 
+                assert result.containsKey(key) == false;
+                if(score > 0.0D){
+                    result.put(key, score);
+                }
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -144,14 +118,15 @@ public class Localization  {
                 }
             }
         }
-
         return result;
     }
 
-    public List<Suspicious> getSuspiciousLite(boolean jump){
-        File suspicousFile = new File(Config.LOCALIZATION_RESULT_CACHE+ FileUtils.getMD5(StringUtils.join(testClasses,"")+classpath+testClassPath+srcPath+testSrcPath)+".sps");
 
-        if (suspicousFile.exists() && jump ){
+    public List<Suspicious> getSuspiciousLiteOfUW(String subject, String bugid){
+        File suspicousFile = new File(Config.LOCALIZATION_RESULT_CACHE +
+                FileUtils.getMD5(StringUtils.join(testClasses,"")+classpath+testClassPath+srcPath+testSrcPath)+".sps");
+
+        if (suspicousFile.exists()){
             try {
                 ObjectInputStream objectInputStream = new ObjectInputStream(new FileInputStream(suspicousFile));
                 List<Suspicious> result = (List<Suspicious>) objectInputStream.readObject();
@@ -162,14 +137,66 @@ public class Localization  {
             }
         }
 
-        List<StatementExt> statements = statementFilter(this.getSuspiciousListWithSuspiciousnessBiggerThanZero());
+        List<Suspicious> result = new ArrayList<>();
+
+        scoreMapOfUW = loadUWData(subject, bugid);
+
+        List<Statement> statements = statementFilter(this.getSuspiciousListWithSuspiciousnessBiggerThanZero(new NoMetric()));
+        if (statements.size() == 0){
+            return result;
+        }
+        for(Statement s: statements){
+            StatementByUW currStmt = (StatementByUW) s;
+            String clzAddress = getClassAddressFromStatement(currStmt);
+            String tagFunction = getTargetFunctionFromStatement(currStmt);
+            double score = currStmt.getSuspiciousness();
+            List<String> lineList = new ArrayList<String>();
+            lineList.add("" + currStmt.getLineNumber());
+            Suspicious susp = new Suspicious(classpath, testClassPath,srcPath,testSrcPath, clzAddress, tagFunction,
+                    score, currStmt.getTests(),currStmt.getFailTests(), lineList,libPaths);
+//            susp.setErrorLines();
+            result.add(susp);
+        }
+        try {
+            suspicousFile.createNewFile();
+            ObjectOutputStream objectOutputStream = new ObjectOutputStream(new FileOutputStream(suspicousFile));
+            objectOutputStream.writeObject(result);
+            objectOutputStream.close();
+        } catch (IOException e){
+            e.printStackTrace();
+            return new ArrayList<Suspicious>();
+        }
+        RecordUtils recordUtils = new RecordUtils("localization");
+        for (Suspicious suspicious: result){
+            recordUtils.write(suspicious.classname()+"#"+suspicious.functionnameWithoutParam()+"#"+suspicious.getDefaultErrorLine()+"\n");
+        }
+        recordUtils.close();
+        return result;
+    }
+
+    public List<Suspicious> getSuspiciousLite(boolean jump){
+        File suspicousFile = new File(Config.LOCALIZATION_RESULT_CACHE+ FileUtils.getMD5(StringUtils.join(testClasses,"")+classpath+testClassPath+srcPath+testSrcPath)+".sps");
+
+        if (suspicousFile.exists() && jump){
+            try {
+                ObjectInputStream objectInputStream = new ObjectInputStream(new FileInputStream(suspicousFile));
+                List<Suspicious> result = (List<Suspicious>) objectInputStream.readObject();
+                objectInputStream.close();
+                return result;
+            }catch (Exception e){
+                System.out.println("Reloading Localization Result...");
+            }
+        }
+
+        List<Statement> statements = statementFilter(this.getSuspiciousListWithSuspiciousnessBiggerThanZero(new Ochiai()));
         List<Suspicious> result = new ArrayList<Suspicious>();
         if (statements.size() == 0){
             return result;
         }
-        StatementExt firstline = statements.get(0);
+        StatementExt firstline = (StatementExt) statements.get(0);
         List<String> lineNumbers = new ArrayList<String>();
-        for (StatementExt statement: statements){
+        for (Statement stmt: statements){
+            StatementExt statement = (StatementExt) stmt;
             if (getClassAddressFromStatement(statement).equals(getClassAddressFromStatement(firstline)) &&
                     getTargetFunctionFromStatement(statement).equals(getTargetFunctionFromStatement(firstline))){
                 lineNumbers.add(String.valueOf(statement.getLineNumber()));
@@ -178,7 +205,8 @@ public class Localization  {
                 String tagFun = getTargetFunctionFromStatement(firstline);
                 double score = firstline.getSuspiciousness();
                 result.add(new Suspicious(classpath, testClassPath,srcPath,testSrcPath, clzAdd, tagFun,
-                        score, firstline.getTests(),firstline.getFailTests(), new ArrayList<String>(lineNumbers),libPaths));
+                        score, firstline.getTests(),firstline.getFailTests(),
+                        new ArrayList<String>(lineNumbers),libPaths));
                 firstline = statement;
                 lineNumbers.clear();
                 if (!lineNumbers.contains(String.valueOf(statement.getLineNumber()))){
@@ -215,15 +243,15 @@ public class Localization  {
         return result;
     }
 
-    private List<StatementExt> statementFilter(List<StatementExt> statements){
-        List<StatementExt> result = new ArrayList<>();
+    private List<Statement> statementFilter(List<Statement> statements){
+        List<Statement> result = new ArrayList<>();
         String packageName = "";
         for (int i=0; i< 2; i++){
             String[] test = testClasses[0].split("\\.");
             packageName += test[i];
             packageName += ".";
         }
-        for (StatementExt statement: statements){
+        for (Statement statement: statements){
             if (statement.getName().contains("exception") || statement.getName().contains("Exception")){
                 continue;
             }
@@ -236,42 +264,12 @@ public class Localization  {
     }
 
 
-    public List<HashMap<SuspiciousField, String>> getSuspiciousListLiteWithSpecificLine(){
-        List<StatementExt> statements = this.getSuspiciousListWithSuspiciousnessBiggerThanZero();
-        List<HashMap<SuspiciousField, String>> result = new ArrayList<HashMap<SuspiciousField, String>>();
-        StatementExt firstline = statements.get(0);
-        Collection<String> lineNumbers = new ArrayList<String>();
-        for (StatementExt statement: statements){
-            if (getClassAddressFromStatement(statement).equals(getClassAddressFromStatement(firstline)) && getTargetFunctionFromStatement(statement).equals(getTargetFunctionFromStatement(firstline))){
-                lineNumbers.add(String.valueOf(statement.getLineNumber()));
-            }else {
-                HashMap<SuspiciousField, String> data = new HashMap<SuspiciousField, String>();
-                data.put(SuspiciousField.class_address, getClassAddressFromStatement(firstline));
-                if (lineNumbers.size() == 1){
-                    data.put(SuspiciousField.line_number, (String)lineNumbers.toArray()[0]);
-                }else {
-                    data.put(SuspiciousField.line_number, StringUtils.join(lineNumbers,"-"));
-                }
-                data.put(SuspiciousField.error_tests, getErrorTestsStringFromStatement(firstline));
-                data.put(SuspiciousField.suspiciousness, getSupiciousnessFromStatement(firstline));
-                data.put(SuspiciousField.target_function, getTargetFunctionFromStatement(firstline));
-                result.add(data);
-                firstline = statement;
-                lineNumbers.clear();
-                lineNumbers.add(String.valueOf(statement.getLineNumber()));
-            }
-        }
-
-        return result;
-    }
-
 
     /**
      *
-     * @param metric the suspiciousness calculate metric
      * @return the list of suspicious statement
      */
-    public List<StatementExt> getSuspiciousListWithMetric(Metric metric){
+    public List<Statement> getSuspiciousList(Metric metric){
         URL[] classpaths = JavaLibrary.classpathFrom(testClassPath);
         classpaths = JavaLibrary.extendClasspathWith(classpath, classpaths);
         if (libPaths != null){
@@ -279,7 +277,12 @@ public class Localization  {
                 classpaths = JavaLibrary.extendClasspathWith(path, classpaths);
             }
         }
-        GZoltarSuspiciousProgramStatements gZoltar = GZoltarSuspiciousProgramStatements.create(classpaths, testClasses, new Ochiai(),testSrcPath, srcPath, libPaths);
+        GZoltarSuspiciousProgramStatements gZoltar = GZoltarSuspiciousProgramStatements.create(classpaths, testClasses, metric,testSrcPath, srcPath, libPaths);
+
+        if(metric instanceof NoMetric){
+            gZoltar.getGzoltar().setScoreMapOfUW(scoreMapOfUW);
+        }
+
         return gZoltar.sortBySuspiciousness(testClasses);
     }
 
